@@ -1313,12 +1313,44 @@
 	<Type range="true">String</Type>
       </Parameter>
       <Help>
-	<Text>The IMSUM() returns the sum of severial complex number of form x+yi.</Text>
+	<Text>The IMSUM() returns the sum of several complex number of form x+yi.</Text>
 	<Syntax>IMSUM( values; value; ... )</Syntax>
 	<Example>IMSUM(1.2;"3.4+5i") returns "4.6+5i"</Example>
 	<Example>IMSUM(1.2;"1i") returns "1.2+i"</Example>
       </Help>
     </Function>
+
+    <Function>
+      <Name>IMDIV</Name>
+      <Type>String</Type>
+      <Parameter optional="true">
+	<Comment>Complex number</Comment>
+	<Type range="true">String</Type>
+      </Parameter>
+      <Parameter optional="true">
+	<Comment>Complex number</Comment>
+	<Type range="true">String</Type>
+      </Parameter>
+      <Parameter optional="true">
+	<Comment>Complex number</Comment>
+	<Type range="true">String</Type>
+      </Parameter>
+      <Parameter optional="true">
+	<Comment>Complex number</Comment>
+	<Type range="true">String</Type>
+      </Parameter>
+      <Parameter optional="true">
+	<Comment>Complex number</Comment>
+	<Type range="true">String</Type>
+      </Parameter>
+      <Help>
+	<Text>The IMDIV() returns the division of several complex number of form x+yi.</Text>
+	<Syntax>IMDIV( values; value; ... )</Syntax>
+	<Example>IMDIV(1.2;"3.4+5i") returns "0.111597+0.164114i"</Example>
+	<Example>IMDIV("12+i";"12-i") returns "0.986207+0.16551i"</Example>
+      </Help>
+    </Function>
+
 
     <Function>
       <Name>IMSUB</Name>
@@ -1679,7 +1711,7 @@
 	<Type>Double</Type>
       </Parameter>
       <Help>
-	<Text>The SUMPRODUCT() function returns the sum of product of these value. The number of value should be equal between two arrays. Otherwise this function returns Err.</Text>
+	<Text>The SUMPRODUCT() function (SUM(X*Y)) returns the sum of product of these value. The number of value should be equal between two arrays. Otherwise this function returns Err.</Text>
 	<Syntax>SUMPRODUCT(array1;array2)</Syntax>
 	<Example>SUMPRODUCT(A1:A2;B1;B2) with A1=2 A2=5 and B1=3 B2=5 returns 31</Example>
       </Help>
@@ -1697,9 +1729,45 @@
 	<Type>Double</Type>
       </Parameter>
       <Help>
-	<Text>The SUMX2PY2() function returns the sum of square of these value. The number of value should be equal between two arrays. Otherwise this function returns Err.</Text>
+	<Text>The SUMX2PY2() function (SUM(X^2+Y^2)) returns the sum of square of these value. The number of value should be equal between two arrays. Otherwise this function returns Err.</Text>
 	<Syntax>SUMX2PY2(array1;array2)</Syntax>
 	<Example>SUMX2PY2(A1:A2;B1;B2) with A1=2 A2=5 and B1=3 B2=5 returns 63</Example>
+      </Help>
+    </Function>
+
+    <Function>
+      <Name>SUMX2MY2</Name>
+      <Type>Float</Type>
+      <Parameter>
+	<Comment>Value (array)</Comment>
+	<Type>Double</Type>
+      </Parameter>
+      <Parameter>
+	<Comment>Value (array)</Comment>
+	<Type>Double</Type>
+      </Parameter>
+      <Help>
+	<Text>The SUMX2MY2() function (SUM(X^2-Y^2) returns the difference of square of these value. The number of value should be equal between two arrays. Otherwise this function returns Err.</Text>
+	<Syntax>SUMX2MY2(array1;array2)</Syntax>
+	<Example>SUMX2MY2(A1:A2;B1;B2) with A1=2 A2=5 and B1=3 B2=5 returns -5</Example>
+      </Help>
+    </Function>
+
+    <Function>
+      <Name>SUM2XMY</Name>
+      <Type>Float</Type>
+      <Parameter>
+	<Comment>Value (array)</Comment>
+	<Type>Double</Type>
+      </Parameter>
+      <Parameter>
+	<Comment>Value (array)</Comment>
+	<Type>Double</Type>
+      </Parameter>
+      <Help>
+	<Text>The SUM2XMY() function (SUM((X-Y)^2)) returns the square of difference of these value. The number of value should be equal between two arrays. Otherwise this function returns Err.</Text>
+	<Syntax>SUM2XMY(array1;array2)</Syntax>
+	<Example>SUM2XMY(A1:A2;B1;B2) with A1=2 A2=5 and B1=3 B2=5 returns 1</Example>
       </Help>
     </Function>
 
