@@ -1087,3 +1087,7 @@ Now you can copy and insert in same time (For the moment just for column/row)
 -Now kspread understands complex number
 you can add /sub complex number
 COMPLEX, IMREAL, IMAGINARY, IMSUB, IMSUM
+
+2000-11-28-Montel laurent <lmontel@mandrakesoft.com>
+----------------------------------------------------
+Add new math functions IMDIV, SUMPRODUCT  , SUMX2PY2 ,    SUMX2MY2    ,  SUM2XMY
